--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,6 +63,21 @@
               <i class="fas fa-layer-group me-2"></i> Compose
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white {% if request.endpoint == 'main.images' %}active{% endif %}" href="{{ url_for('main.images') }}">
+              <i class="fas fa-boxes-stacked me-2"></i> Images
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white {% if request.endpoint == 'main.volumes' %}active{% endif %}" href="{{ url_for('main.volumes') }}">
+              <i class="fas fa-database me-2"></i> Volumes
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white {% if request.endpoint == 'main.networks' %}active{% endif %}" href="{{ url_for('main.networks') }}">
+              <i class="fas fa-network-wired me-2"></i> Networks
+            </a>
+          </li>
           
           <!-- Configuration Section -->
           <li class="nav-header text-white-50 px-3 py-2 mt-3 mb-1">
