--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -82,7 +82,7 @@
             <i class="fa-solid fa-images text-secondary me-2 fs-4"></i>
             <span class="text-muted small fw-bold text-uppercase">Total Images</span>
           </div>
-          <div class="h2 mb-0 text-secondary">{{ total_images }} images · {{ total_images_size_gb }}</div>
+          <div class="h2 mb-0 text-secondary">{{ total_images }} <span class="meta-size">{{ total_images_size_gb }}</span></div>
         </div>
       </div>
     </div>
